@@ -9,7 +9,9 @@ proc summaryCommand*(
   valid: bool;
   rawNeededHours, realNeededHours, dayHours: float,
   totalStoryPoints, totalSatisfaction: int,
-  totalPositiveBilled, totalNegativeBilled, totalBilled, totalBalance, totalBilledHours, totalPositiveBilledHours, totalNegativeBilledHours: float,
+  totalPositiveBilled, totalNegativeBilled, totalBilled, totalBalance,
+    totalBilledHours, totalPositiveBilledHours, totalNegativeBilledHours,
+    minAverageHourPrice: float,
 ] =
   ## Checks if routine is not larger than day
   let
@@ -37,6 +39,7 @@ proc summaryCommand*(
   result.totalBilledHours = billed.hours
   result.totalNegativeBilledHours = billed.negativeHours
   result.totalPositiveBilledHours = billed.positiveHours
+  result.minAverageHourPrice = result.totalBilled / billed.hours
 
   result.valid = result.realNeededHours <= result.dayHours and
                  result.totalStoryPoints <= routine.config.prerequisites.maxStoryPoints.get and
@@ -44,4 +47,5 @@ proc summaryCommand*(
                  (if routine.config.nonWorkDays.get.isForToday today: true else:
                    result.totalBalance >= routine.config.prerequisites.minBalance.get and
                    result.totalBilled >= routine.config.prerequisites.minBilled.get and
-                   result.totalBilledHours >= routine.config.prerequisites.minBilledHours.get)
+                   result.totalBilledHours >= routine.config.prerequisites.minBilledHours.get and
+                   result.minAverageHourPrice >= routine.config.prerequisites.minAverageHourPrice.get)
